--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@ $RECYCLE.BIN/
 # =========================
 # Operating System Files
 # =========================
+.vs/PartyInvites/v15/Server/sqlite3/storage.ide-wal
+.vs/config/applicationhost.config
+.vs/PartyInvites/v15/Server/sqlite3/storage.ide-shm
+.vs/config/applicationhost.config
+.vs/PartyInvites/DesignTimeBuild/.dtbcache
+.vs/PartyInvites/v15/Server/sqlite3/db.lock
+.vs/PartyInvites/v15/Server/sqlite3/storage.ide
+.vs/PartyInvites/DesignTimeBuild/.dtbcache
+.vs/config/applicationhost.config
