--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ $RECYCLE.BIN/
 .vs/PartyInvites/v15/Server/sqlite3/storage.ide
 .vs/PartyInvites/DesignTimeBuild/.dtbcache
 .vs/config/applicationhost.config
+.vs/PartyInvites/v15/.suo
